# xbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  operations.md
scripts/: migrate_legacy_data.py
src/twitter_bot/: __init__.py
src/twitter_bot/cli/: main.py  migrate.py  publish.py  review.py  schedule.py  scrape.py  telegram.py  translate.py
src/twitter_bot/config/: settings.py
src/twitter_bot/infra/clients/: openai_client.py  twitter_publisher.py  twitter_scraper.py
src/twitter_bot/infra/repositories/: json_store.py
src/twitter_bot/infra/telegram/: __init__.py  bot.py
src/twitter_bot/interfaces/: __init__.py  storage.py  translation_provider.py  twitter_client.py
src/twitter_bot/models/: __init__.py  base.py  translation.py  tweet.py
src/twitter_bot/services/: __init__.py  factory.py  operator.py  publishing.py  scheduling.py  scraping.py  translation.py
src/twitter_bot/utils/: io.py  legacy.py  logging.py  twitter.py
src/xbot/: __init__.py
src/xbot/cli/: main.py  migrate.py  publish.py  review.py  schedule.py  scrape.py  telegram.py  translate.py
src/xbot/config/: settings.py
src/xbot/infra/clients/: openai_client.py  x_publisher.py  x_scraper.py
src/xbot/infra/repositories/: json_store.py
src/xbot/infra/telegram/: bot.py
src/xbot/interfaces/: __init__.py  storage.py  translation_provider.py  x_client.py
src/xbot/models/: __init__.py  base.py  job.py  translation.py  tweet.py
src/xbot/services/: __init__.py  factory.py  operator.py  publishing.py  scheduling.py  scraping.py  translation.py
src/xbot/utils/: legacy.py  logging.py  x_platform.py
tests/: conftest.py
tests/integration/: test_migrate_legacy.py
tests/unit/: test_json_storage.py  test_logging.py  test_models_threads.py  test_openai_client.py  test_operator_processor.py  test_publishing_service.py  test_review_cli.py  test_scheduler_service.py  test_scraper_service.py  test_settings.py  test_translation_service.py
